[package]
name = "rust-mqtt-presence-checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
confy = "0.5.1"
toml = "0.7.3"
serde = "^1.0.159"
serde_derive = "^1.0.159"
log = "0.4.17"
directories = "5.0.1"
