[package]
name = "mqtt-presence-checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["derive"] }
stderrlog = "^0.5.4"
log = "^0.4.20"
directories = "^5.0.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
confy = "0.5.1"
rumqttc = "0.23.0"
bytes = "1.5.0"
uuid = { version = "1.6.1", features = ["v4"] }
